--- a/public/index.html
+++ b/public/index.html
@@ -1,39 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>My Website</title>
+  <title>Kare Portfolio</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+  <style>
+    .project-box {
+      transition: transform .2s;
+    }
+    .project-box:hover {
+      transform: scale(1.1);
+    }
+    .video-background {
+      position: fixed;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      overflow: hidden;
+      z-index: -1;
+    }
+    .video-background video {
+      position: relative;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      object-fit: cover
+    }
+  </style>
 </head>
 <body>
 
-<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-  <a class="navbar-brand" href="#">Logo</a>
-  <ul class="navbar-nav">
-    <li class="nav-item">
-      <a class="nav-link" href="#">Home</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#">Projects</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#">About</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#">Contact</a>
-    </li>
-  </ul>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <a class="navbar-brand" href="index.html">
+        <img src="s_logo.gif" alt="Logo" style="width:80px;">
+  </a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Home</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Projects</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">About</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Contact</a>
+      </li>
+    </ul>
+  </div>
 </nav>
 
-<div class="jumbotron text-center">
-  <h1 class="display-4">Welcome to My Website</h1>
-  <p class="lead">This is the Home page.</p>
+<div class="video-background">
+  <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
+    <source src="lights_video.mp4" type="video/mp4">
+  </video>
 </div>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<div class="container text-center">
+  <div class="row" style="height: 40vh;">
+    <div class="col">
+      <h1 class="display-4 font-weight-bold text-white">Welcome to My Portfolio</h1>
+      <p class="display-5 text-monospace text-white">This is the Home page.</p>
+    </div>
+  </div>
+</div>
+
+<div class="container">
+  <div class="row">
+    <div class="col-md-4">
+      <div class="card mb-4 project-box">
+        <img class="card-img-top" src="download_image.png" alt="Project Image">
+        <div class="card-body">
+          <h5 class="card-title text-monospace">Playlist Downloader</h5>
+          <p class="card-text">Downloads complete YT playlist to your local system</p>
+          <a href="templates/ytdl.html" class="btn btn-primary">Go to Project</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-md-4">
+      <div class="card mb-4 project-box">
+        <img class="card-img-top" src="download_image.png" alt="Project Image">
+        <div class="card-body">
+          <h5 class="card-title text-monospace">Playlist Downloader</h5>
+          <p class="card-text">Downloads complete YT playlist to your local system</p>
+          <a href="templates/ytdl.html" class="btn btn-primary">Go to Project</a>
+        </div>
+      </div>
+    </div>
+    <!-- Add more project boxes as needed -->
+  </div>
+</div>
+
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
 </body>
 </html>
